[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyodio"
version = "0.1.0"
description = "Async Python client for odio-api, the universal remote for your Linux multimedia server"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mathieu Réquillart" }]
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/b0bbywan/pyodio"
Documentation = "https://docs.odio.love"

[dependency-groups]
dev = [
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyodio"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--strict-markers", "--tb=short"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
